README has been updated

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
     integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
     crossorigin="anonymous"></script>
-    <title>Work Day Scheduler</title>
+    <title>Daily Task Manager</title>
   </head>
 
   <body>
     <header class="p-5 mb-4 border-5 border-bottom border-dark text-center">
-      <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead">A simple calendar app for scheduling your work day</p>
+      <h1 class="display-3">Daily Work Planner</h1>
+      <p class="lead">Add tasks to any time slot by clicking in the box next to the hour.</p>
       <p id="currentDay" class="lead"></p> 
     </header>
     <div class="container-lg px-5">
